--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,11 +4,17 @@ project:
 
 website:
   title: "Zgagalis.github.io"
-  navbar:
-    left:
-      - href: index.qmd
-        text: Home
-      - about.qmd
+navbar:
+  title: "Zoe Gagalis"
+  left:
+    - text: "Home"
+      href: index.html
+    - text: "About"
+      href: about.html
+    - text: "Resume"
+      href: resume.html
+    - text: "Projects"
+      href: projects.html
 
 format:
   html:
