--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,8 +1,6 @@
 project:
   type: website
   output-dir: docs
-  
-
 website:
   title: "Zoe Gagalis"
   navbar:
@@ -11,8 +9,11 @@ website:
       text: Home
     - Resume.qmd
     - Projects.qmd
-
-
+    - about.qmd
+  page-footer:
+    background: light
+    left: <p> &copy; 2025 Zoe Gagalis. All rights reserved</p>
+    right: This website is built with rstudio and github
 format:
   html:
     theme: lux
@@ -23,6 +24,4 @@ format:
     monofont: courier new
     toc: true
     toc-location: right
-
-editor: visual
 
